--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity
             android:name=".ui.team.activities.PlayerDetailsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.gallery.activities.ImageDetailsActivity"></activity>
+        <activity android:name=".ui.gallery.activities.ImageDetailsActivity"/>
     </application>
 
 </manifest>
