--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:customtabs:26.0.0-alpha1'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 
@@ -41,7 +45,14 @@ dependencies {
     compile 'com.android.support:support-v4:26.0.0-alpha1'
 
     //facebook api
+    compile('com.facebook.android:facebook-android-sdk:4.25.0') {
+        exclude group: 'com.android.support'
+    }
+
     compile 'com.infstory:retrofacebook:1.0.1'
+
+    //JSON parsing
+    compile 'com.google.code.gson:gson:2.8.1'
 
     //test
     testCompile 'junit:junit:4.12'
