--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,12 @@ dependencies {
 
     //support libs
     compile 'com.android.support:support-v4:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:customtabs:26.0.0-alpha1'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:mediarouter-v7:26.0.0-alpha1'
 
     //facebook api
     compile 'com.infstory:retrofacebook:1.0.1'
@@ -56,4 +56,6 @@ dependencies {
     //test
     testCompile 'junit:junit:4.12'
 
+    //Maps
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
 }
