created GameModel. Implemented Firebase into app. Entered data into Firebase database.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,9 @@ dependencies {
 
     //Maps
     compile 'com.google.android.gms:play-services-maps:11.0.2'
+
+    //Firebase
+    apply plugin: 'com.google.gms.google-services'
+    compile 'com.google.firebase:firebase-database:11.0.2'
+
 }
