--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,21 +34,20 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
-
     //support libs
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:customtabs:26.0.0-alpha1'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:mediarouter-v7:26.0.0-alpha1'
 
     //facebook api
-    compile 'com.infstory:retrofacebook:1.0.1'
     compile('com.facebook.android:facebook-android-sdk:4.25.0') {
         exclude group: 'com.android.support'
     }
+    compile 'com.infstory:retrofacebook:1.0.1'
 
     //JSON parsing
     compile 'com.google.code.gson:gson:2.8.1'
@@ -63,4 +62,7 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
     compile 'com.google.firebase:firebase-database:11.0.2'
 
+
 }
+
+apply plugin: 'com.google.gms.google-services'
